@@ -460,6 +460,7 @@ The following extensions are migrated into MediaWiki 1.14:
   file extension (e.g. Foo. jpg).
 * Ensure that all HTML id's begin with a letter as required by XHTML standard
 * Image moving over an existing file no longer throws a database error
+* (bug 14117) Image redirects from the shared repo now show "redirected from"
 
 === API changes in 1.14 ===
 
